Changes in homepage

--- a/templated-introspect/index.html
+++ b/templated-introspect/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Introspect by TEMPLATED</title>
+		<title>HLK TECH CLUB</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,11 +16,13 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo">introspect</a>
+					<a class="logo" href="index.html"> 
+						<img class="img_icon" src="../templated-introspect/images/TECH.jpg">
+					</a>
 					<nav id="nav">
-						<a href="index.html">Home</a>
-						<a href="generic.html">Generic</a>
-						<a href="elements.html">Elements</a>
+						<a href="index.html">Giới thiệu</a>
+						<a href="generic.html">Thành viên</a>
+						<a href="elements.html">Hoạt động</a>
 					</nav>
 				</div>
 			</header>
@@ -29,10 +31,9 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>Introspect: <span>A free + fully responsive<br />
-					site template by TEMPLATED</span></h1>
+					<h1>HLK TECH CLUB <br> <span>Câu lạc bộ Công nghệ và Kĩ Thuật <br> Trường THPT Chuyên Hoàng Lê Kha</span></h1>
 					<ul class="actions">
-						<li><a href="#" class="button alt">Get Started</a></li>
+						<li><a href="#" class="button alt">Bắt đầu nào!</a></li>
 					</ul>
 				</div>
 			</section>
