--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
 			<header id="header">
 				<div class="inner">
 					<a class="logo" href="index.html"> 
-						<img class="img_icon" src="../templated-introspect/images/TECH.jpg">
+						<img class="img_icon" src="../webgroup3/images/TECH.jpg">
 					</a>
 					<nav id="nav">
 						<a href="index.html">Giới thiệu</a>
 						<a href="generic.html">Thành viên</a>
-						<a href="elements.html">Hoạt động</a>
+						<a class="member_menu_name" href="elements.html">Hoạt động</a>
+							<div class="member_menu">
+								<a href="index.html">Sự kiện</a>
+								<a href="https://www.facebook.com/dohonghuan/">Thành tích</a>
+								<a href="https://www.facebook.com/t.minh.dat.99/">Dự định</a>
+							</div>
 					</nav>
 				</div>
 			</header>
