--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a class="logo" href="index.html"> 
-						<img class="img_icon" src="../webgroup3/images/TECH.jpg">
+						<img class="img_icon" src="../images/TECH.jpg">
 					</a>
 					<nav id="nav">
 						<a href="index.html">Giới thiệu</a>
