--- a/elements.html
+++ b/elements.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Elements - Introspect by TEMPLATED</title>
+		<title>Hoạt động</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -37,13 +37,13 @@
 					<!-- Text -->
 						<section>
 							<h3>Năm 2018</h3>
-							<p> Ngày 14/9/2018: BBài viết đầu tiên giới thiệu clb được đăng tải</p>
+							<p> Ngày 14/9/2018: Bài viết đầu tiên giới thiệu clb được đăng tải</p>
 							<p>Ngày 16/9/2018: Giới thiệu những hình ảnh cũng nhưng thông tin về arduino</p>
 							<p>Ngày 21/9/2018: Video đầu tiên về robot giao phát bài tập được đăng tải</p>
-							<p>Ngày 1/10/2018: Thông tin về đợtt tuyển thành viên đầu tiên đươc đăng</p>
+							<p>Ngày 1/10/2018: Thông tin về đợt tuyển thành viên đầu tiên đươc đăng</p>
 							<p>	Ngày 18,20/10/2018: Phỏng vấn tuyển thành viên</p>
 							<p>Ngày 24/10/2018: Kết quá phỏng vấn</p>
-							<p>Ngày 18/11/2018: offline giao lưu công</p> 
+							<p>Ngày 18/11/2018: Offline giao lưu công</p> 
 							<hr />
 							<header>
 								<h3>Năm 2019</h3>
@@ -58,7 +58,7 @@
 								<p>Ngày 26/8/2020-23/9/2020: tech ledge các thế hệ máy tính</p>
 								<p>Ngày 24/11/2020: Giới thiệu mở đơn đăng kí sự kiện</p>
 							<h4>Năm 2021</h4>
-							<p>Ngày 5/1/2021: tổ chức sự kiện techmeet</p>
+							<p>Ngày 5/1/2021: Tổ chức sự kiện techmeet</p>
 							<p>Ngày 6/1-15/1/2021: Tuyển thành viên</p>
 							<p>...Đang cập nhật...</p>
 
