--- a/Hoạt động.html
+++ b/Hoạt động.html
@@ -4,22 +4,24 @@
 		<title>Hoạt động</title>
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-		<link rel="stylesheet" href="./Hoạt động_files/main.css">
+		<link rel="stylesheet" href="assets/css/main.css">
 	</head>
 	<body class="">
 
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="file:///D:/HLK%20TECH%20CLUB/webgroup3/index.html" class="logo">introspect</a>
+					<a class="logo" href="index.html"> 
+						<img class="img_icon" src="../webgroup3/images/TECH.jpg">
+					</a>
 					<nav id="nav">
-						<a href="file:///D:/HLK%20TECH%20CLUB/webgroup3/index.html">Giới thiệu</a>
-						<a href="file:///D:/HLK%20TECH%20CLUB/webgroup3/generic.html">Thành viên</a>
-						<a href="file:///D:/HLK%20TECH%20CLUB/webgroup3/elements.html">Hoạt động</a>
+						<a href="index.html">Giới thiệu</a>
+						<a href="generic.html">Thành viên</a>
+						<a href="elements.html">Hoạt động</a>
 					</nav>
 				</div>
 			</header>
-			<a href="file:///D:/HLK%20TECH%20CLUB/webgroup3/elements.html#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+			<a href="elements.html#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
 		<!-- Main -->
 			<section id="main">
