--- a/Mục đích và Kế hoạch.html
+++ b/Mục đích và Kế hoạch.html
@@ -16,7 +16,9 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo">introspect</a>
+					<a class="logo" href="index.html"> 
+						<img class="img_icon" src="../webgroup3/images/TECH.jpg">
+					</a>
 					<nav id="nav">
 						<a href="index.html">Giới thiệu</a>
 						<a href="generic.html">Thành viên</a>
