--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<a class="member_menu_name">TECH CLUB có gì?</a>
 							<div class="member_menu">
 								<a href="Hoạt động.html">Hoạt động</a>
-								<a href="Than">Thành tích</a>
+								<a href="thanhtich.html">Thành tích</a>
 								<a href="Mục đích và Kế hoạch.html">Kế hoạch</a>
 							</div>
 					</nav>
@@ -47,11 +47,12 @@
 			<section id="one">
 				<div class="inner">
 					<header>
-						<h2>Magna Etiam Lorem</h2>
+						<h2>Về HLK TECH CLUB</h2>
 					</header>
-					<p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet nibh viverra malesuada. Nunc sem lacus, accumsan quis, faucibus non, congue vel, arcu, erisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique. Nunc iaculis mi in ante.</p>
+					<p>Câu lạc bộ Công nghệ và Kĩ Thuật trường THPT Chuyên Hoàng Lê Kha - nơi lan tỏa tình yêu công nghệ, kĩ thuật đến các bạn học sinh.</p>
+					<p>Hãy đến với chúng mình, học hỏi và thể hiện bản thân nhé!</p>
 					<ul class="actions">
-						<li><a href="#" class="button alt">Learn More</a></li>
+						<li><a href="https://www.facebook.com/hlktechclub/" class="button alt">Learn More</a></li>
 					</ul>
 				</div>
 			</section>
