--- a/thanhtich.html
+++ b/thanhtich.html
@@ -4,43 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./thanhtich.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/main.css" type="text/css">
 </head>
 <body>
+    <!-- Header -->
+			<header id="header">
+				<div class="inner">
+					<a class="logo" href="index.html"> 
+						<img class="img_icon" src="../webgroup3/images/TECH.jpg">
+					</a>
+					<nav id="nav">
+						<a href="index.html">Giới thiệu</a>
+						<a href="generic.html">Thành viên</a>
+						<a class="member_menu_name">TECH CLUB có gì?</a>
+							<div class="member_menu">
+								<a href="Hoạt động.html">Hoạt động</a>
+								<a href="thanhtich.html">Thành tích</a>
+								<a href="Mục đích và Kế hoạch.html">Kế hoạch</a>
+							</div>
+					</nav>
+				</div>
+			</header>
+			<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+    <h1> Một số thành tích nổi bật</h1>
+    <hr>
     <h1> 2017</h1>
-    <h2> Một số thành tích nổi bật</h2>
-    <h3>1. Robot thu phát bài tập </h3>
-    <h2> </h2>
-    <h4>Chú robot này được các anh chị Anh k22 lên ý tưởng và hoàn thành. </h4>
-    <h2> </h2>
-    <h4> Sản phẩm này của tụi mình được tham gia cuộc thi SROBOT 2017. Chi tiết các bạn xem ở đường link phía dưới </h4>
+    <h3>Robot thu phát bài tập </h3>
+    <p>Chú robot này được các anh chị K22 lên ý tưởng và hoàn thành. </p>
+    <p> Sản phẩm này của tụi mình được tham gia cuộc thi SROBOT 2017. Chi tiết các bạn xem ở đường link phía dưới </p>
     <a href="https://www.youtube.com/watch?v=6xoE6v8ZThA"> https://www.youtube.com/watch?v=6xoE6v8ZThA ></a>
-    <h4> Dưới đây là vài ảnh minh họa</h4>
-    <img src="maythuphatbt.jpg" height="400px" >
-    <img src="maythuphatbt2.jpg" height="400px">
-
+    <br></br>
+    <p> Dưới đây là vài ảnh minh họa</p>
+    <img src="../webgroup3/images/maythuphatbt1.jpg" height="400px" >
+    <img src="../webgroup3/images/maythuphatbt2.jpg" height="400px">
+    <hr>
     <h1>2019</h1>
-    <h3> Trong ngày Chủ Nhật (13/1), các bạn trong HLK Tech Club đã tham dự cuộc thi Đua thuyền lập trình lập trình Arduino bằng năng lượng mặt trời ở trường ĐH SPKT TPHCM. </h3>
-    <h3> Tuy là lần đầu tham dự nhưng các bạn team 3 Chú Họa My: Lê Nhật Nam Les(11 Tin), Hồ Trương  Đức Tiến (11 Tin) và Lại Hoàng Huy (10 N2) đã xuất sắc giành được: 👉1 giải Khuyến Khích 😍😍😍</h3>
-    <h3> Dưới đây là một số hình ảnh về cuộc thi của các bạn học sinh HLK Tech Club</h3>
-    <img src="duathuyen.jpg" height="400px">
+    <p> Trong ngày Chủ Nhật (13/1), các bạn trong HLK Tech Club đã tham dự cuộc thi Đua thuyền lập trình lập trình Arduino bằng năng lượng mặt trời ở trường ĐH SPKT TPHCM. </p>
+    <p> Tuy là lần đầu tham dự nhưng các bạn team 3 Chú Họa My: Lê Nhật Nam Les(11 Tin), Hồ Trương  Đức Tiến (11 Tin) và Lại Hoàng Huy (10 N2) đã xuất sắc giành được: 👉1 giải Khuyến Khích 😍😍😍</p>
+    <p> Dưới đây là một số hình ảnh về cuộc thi của các bạn học sinh HLK Tech Club</p>
+    <img src="../webgroup3/images/duathuyen1.jpg" height="400px">
     <p>Các bạn học sinh cùng cô Lê Thị Hồng Nhung </p>
-    <img src="duathuyen2.jpg" height="400px">
+    <img src="../webgroup3/images/duathuyen2.jpg" height="400px">
     <p> Các công đoạn chuẩn bị với mạch Arduino </p>
-    <img src="duathuyen3.jpg" height="400px">
+    <img src="../webgroup3/images/duathuyen3.jpg" height="400px">
     <p> </p>
-    <img src="duathuyen4.jpg" height="400px" >
+    <img src="../webgroup3/images/duathuyen4.jpg" height="400px" >
     <p> Những chú họa mi đang cần mẫn với công tác chuẩn bị</p>
     
-    <img src="duathuyen5.jpg" height="400px">
+    <img src="../webgroup3/images/duathuyen5.jpg" height="400px">
     <p> Tiếp tục là các bo mạch Arduino </p>
-    <img src="duathuyen6.jpg" height="400px">
+    <img src="../webgroup3/images/duathuyen6.jpg" height="400px">
     <p> Hình ảnh các thành viên của HLK tech club</p>
-    <img src="duathuyen7.jpg" height="400px">
+    <img src="../webgroup3/images/duathuyen7.jpg" height="400px">
     <p> Các đội đang đưa thuyền của mình vào tư thế sẵn sàng</p>
-    <img src="duathuyen8.jpg" height="400px" weight="600px">
+    <img src="../webgroup3/images/duathuyen8.jpg" height="400px" weight="600px">
     <p>Những pha lườm rau gắp thịt tới từ các thành viên của nhóm tụi mình </p>
-    <img src="duathuyen9.jpg" height="400px">
+    <img src="../webgroup3/images/duathuyen9.jpg" height="400px">
     <p>Logo Ba chú họa mi </p>
 
 
