--- a/index.html
+++ b/index.html
@@ -22,12 +22,7 @@
 					<nav id="nav">
 						<a href="index.html">Giới thiệu</a>
 						<a href="generic.html">Thành viên</a>
-						<a class="member_menu_name">TECH CLUB có gì?</a>
-							<div class="member_menu">
-								<a href="Hoạt động.html">Hoạt động</a>
-								<a href="thanhtich.html">Thành tích</a>
-								<a href="Mục đích và Kế hoạch.html">Kế hoạch</a>
-							</div>
+						<a href="Hoạt động.html">Hoạt động</a>
 					</nav>
 				</div>
 			</header>
@@ -63,23 +58,23 @@
 					<article>
 						<div class="content">
 							<header>
-								<h3>Pellentesque adipis</h3>
+								<h3>Môi trường học tập và sáng tạo</h3>
 							</header>
 							<div class="image fit">
-								<img src="images/pic01.jpg" alt="" />
+								<img src="images/creative.jpg" alt="" />
 							</div>
-							<p>Cumsan mollis eros. Pellentesque a diam sit amet mi magna ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet lorem ipsum feugiat tempus.</p>
+							<p>Đảm bảo môi trường giúp khám phá những kiến thức cơ bản, thông dụng nhất về kĩ thuật, công nghệ. Có cơ hội thực hành tạo ra các sản phẩm hữu ích.</p>
 						</div>
 					</article>
 					<article class="alt">
 						<div class="content">
 							<header>
-								<h3>Morbi interdum mol</h3>
+								<h3>Cơ hội giao lưu và kết bạn</h3>
 							</header>
 							<div class="image fit">
-								<img src="images/pic02.jpg" alt="" />
+								<img src="images/friend.jpg" alt="" />
 							</div>
-							<p>Cumsan mollis eros. Pellentesque a diam sit amet mi magna ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet lorem ipsum feugiat tempus.</p>
+							<p>Được gặp gỡ và giao lưu với những người bạn có cùng đam mê và sở thích, cùng nhau hỗ trợ trong học tập và cuộc sống.</p>
 						</div>
 					</article>
 				</div>
@@ -92,9 +87,9 @@
 						<div class="content">
 							<span class="icon fa-laptop"></span>
 							<header>
-								<h3>Tempus Feugiat</h3>
+								<h3>Ban học thuật</h3>
 							</header>
-							<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna lorem ullamcorper laoreet, lectus arcu.</p>
+							<p>Phụ trách chuyên môn, giúp các thành viên tiếp cận các kiến thức</p>
 							<ul class="actions">
 								<li><a href="#" class="button alt">Learn More</a></li>
 							</ul>
@@ -104,9 +99,9 @@
 						<div class="content">
 							<span class="icon fa-diamond"></span>
 							<header>
-								<h3>Aliquam Nulla</h3>
+								<h3>Ban hậu cần</h3>
 							</header>
-							<p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed.</p>
+							<p>Hỗ trợ tổ chức các hoạt động và các buổi sinh hoạt</p>
 							<ul class="actions">
 								<li><a href="#" class="button alt">Learn More</a></li>
 							</ul>
@@ -114,11 +109,11 @@
 					</article>
 					<article>
 					<div class="content">
-							<span class="icon fa-laptop"></span>
+							<span class="icon fa-bars"></span>
 							<header>
-								<h3>Sed Magna</h3>
+								<h3>Ban truyền thông</h3>
 							</header>
-							<p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula.</p>
+							<p>Cập nhật tin tức, quảng bá hoạt động của CLB</p>
 							<ul class="actions">
 								<li><a href="#" class="button alt">Learn More</a></li>
 							</ul>
