--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<p>Câu lạc bộ Công nghệ và Kĩ Thuật trường THPT Chuyên Hoàng Lê Kha - nơi lan tỏa tình yêu công nghệ, kĩ thuật đến các bạn học sinh.</p>
 					<p>Hãy đến với chúng mình, học hỏi và thể hiện bản thân nhé!</p>
 					<ul class="actions">
-						<li><a href="https://www.facebook.com/hlktechclub/" class="button alt">Learn More</a></li>
+						<li><a href="https://www.facebook.com/hlktechclub/" class="button alt">Tìm hiểu thêm</a></li>
 					</ul>
 				</div>
 			</section>
@@ -91,7 +91,7 @@
 							</header>
 							<p>Phụ trách chuyên môn, giúp các thành viên tiếp cận các kiến thức</p>
 							<ul class="actions">
-								<li><a href="#" class="button alt">Learn More</a></li>
+								<li><a href="#" class="button alt">Tìm hiểu thêm</a></li>
 							</ul>
 						</div>
 					</article>
@@ -103,7 +103,7 @@
 							</header>
 							<p>Hỗ trợ tổ chức các hoạt động và các buổi sinh hoạt</p>
 							<ul class="actions">
-								<li><a href="#" class="button alt">Learn More</a></li>
+								<li><a href="#" class="button alt">Tìm hiểu thêm</a></li>
 							</ul>
 						</div>
 					</article>
@@ -115,7 +115,7 @@
 							</header>
 							<p>Cập nhật tin tức, quảng bá hoạt động của CLB</p>
 							<ul class="actions">
-								<li><a href="#" class="button alt">Learn More</a></li>
+								<li><a href="#" class="button alt">Tìm hiểu chung</a></li>
 							</ul>
 						</div>
 					</article>
