--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							<header>
 								<h3>Ban học thuật</h3>
 							</header>
-							<p>Phụ trách chuyên môn, giúp các thành viên tiếp cận các kiến thức</p>
+							<p>Bạn sáng tạo, luôn có những ý tưởng dự án sẵn sàng thực hiện, có sự hiểu biết về kĩ thuật và máy móc. Đây sẽ là ban tổ chức chính các hoạt động của câu lạc bộ.</p>
 							<ul class="actions">
 								<li><a href="#" class="button alt">Learn More</a></li>
 							</ul>
@@ -99,9 +99,11 @@
 						<div class="content">
 							<span class="icon fa-diamond"></span>
 							<header>
-								<h3>Ban hậu cần</h3>
+								<h3>Ban truyền thông</h3>
 							</header>
-							<p>Hỗ trợ tổ chức các hoạt động và các buổi sinh hoạt</p>
+							<p>Bạn thích viết, thích tổ chức các sự kiện, biết sử dụng các phần mềm đồ hoạ hay sử dụng máy ảnh? Hãy đến với ban truyền thông, lan tỏa những giá trị
+								tuyệt vời cùng câu lạc bộ.
+							</p>
 							<ul class="actions">
 								<li><a href="#" class="button alt">Learn More</a></li>
 							</ul>
@@ -111,9 +113,9 @@
 					<div class="content">
 							<span class="icon fa-bars"></span>
 							<header>
-								<h3>Ban truyền thông</h3>
+								<h3>Ban hậu cần</h3>
 							</header>
-							<p>Cập nhật tin tức, quảng bá hoạt động của CLB</p>
+							<p>Bạn là những người trẻ nhiệt tình, năng động và có trách nhiệm với công việc. Đến với Hậu cần bạn sẽ chăm lo và thực hiện dự án để đạt được kết quả tốt nhất.</p>
 							<ul class="actions">
 								<li><a href="#" class="button alt">Learn More</a></li>
 							</ul>
