--- a/Hoạt động.html
+++ b/Hoạt động.html
@@ -33,11 +33,12 @@
 					<!-- Text -->
 						<section>
 							<h3>Năm 2017</h3>
-    						<p>Robot thu phát bài tập được các anh chị K22 lên ý tưởng và hoàn thành tham gia cuộc thi SROBOT 2017. Chi tiết các bạn xem ở đường link phía dưới </p>
-    							<a href="https://www.youtube.com/watch?v=6xoE6v8ZThA"> https://www.youtube.com/watch?v=6xoE6v8ZThA</a>
+    						<p>Robot thu phát bài tập được các anh chị K22 lên ý tưởng và hoàn thành tham gia cuộc thi SROBOT 2017. Chi tiết các bạn xem ở đường link phía dưới
+    							<a href="https://www.youtube.com/watch?v=6xoE6v8ZThA"> https://www.youtube.com/watch?v=6xoE6v8ZThA</a> </p>
 							<h3>Năm 2018</h3>
 							<p>Ngày 14/9/2018: Bài viết đầu tiên giới thiệu CLB được đăng tải</p>
-							<p>Ngày 16/9/2018: Giới thiệu những hình ảnh cũng nhưng thông tin về Arduino</p>
+							<p>Ngày 16/9/2018: Giới thiệu những hình ảnh cùng những thông tin về Arduino</p>
+								<img src="https://scontent.fvca1-2.fna.fbcdn.net/v/t1.0-9/57620732_387845575166417_8645893373007233024_o.jpg?_nc_cat=100&ccb=1-3&_nc_sid=730e14&_nc_ohc=MiF7uVoxY3cAX-EOl4n&_nc_ht=scontent.fvca1-2.fna&oh=4d1d8f8a5f8c3bf6e621b71592e982d4&oe=607688DC" height=400px width=500px>
 							<p>Ngày 21/9/2018: Video đầu tiên về Robot giao phát bài tập được đăng tải</p>
 							<p>Ngày 1/10/2018: Thông tin về đợt tuyển thành viên đầu tiên đươc đăng</p>
 							<p>Ngày 18,20/10/2018: Phỏng vấn tuyển thành viên</p>
@@ -51,10 +52,12 @@
 							<h4>Năm 2020</h4>
 							<p>Ngày 7-11/2/2020: Tuyển chọn thành viên K26</p>
 							<p>5-6/2020: Hoàn thành máy rửa tay cho nhà trường</p>
-								<p>Ngày 26/8/2020-23/9/2020: Techledge các thế hệ máy tính</p>
-								<p>Ngày 24/11/2020: Giới thiệu mở đơn đăng kí sự kiện</p>
+							<p>Ngày 26/8/2020-23/9/2020: Techledge các thế hệ máy tính</p>
+								<img src="https://scontent.fsgn1-1.fna.fbcdn.net/v/t1.0-9/118247769_702195807064724_8910931799578551912_n.jpg?_nc_cat=109&ccb=1-3&_nc_sid=730e14&_nc_ohc=2KL93RYabA4AX_z4MYt&_nc_ht=scontent.fsgn1-1.fna&oh=c1de1c12114a11b153a482e0d51df3d1&oe=6076C285" height="400px">
+							<p>Ngày 24/11/2020: Giới thiệu mở đơn đăng kí sự kiện</p>
 							<h4>Năm 2021</h4>
 							<p>Ngày 5/1/2021: Tổ chức sự kiện Techmeet</p>
+								<img src="https://scontent-hkg4-1.xx.fbcdn.net/v/t1.0-9/135436354_794683267815977_3052604592924023900_o.jpg?_nc_cat=101&ccb=1-3&_nc_sid=730e14&_nc_ohc=Mm6G28f3OSoAX8T-BNz&_nc_ht=scontent-hkg4-1.xx&oh=c9a19e5956050197f2865af767a15e80&oe=60773314" height="400px">
 							<p>Ngày 6/1-15/1/2021: Tuyển thành viên</p>
 							<p>...Đang cập nhật...</p>
 						<hr>
