--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 					</header>
 					<form method="post" action="#">
 						<div class="field half first">
-							<label for="name">Name</label>
+							<label for="name">Tên</label>
 							<input type="text" name="name" id="name" />
 						</div>
 						<div class="field half">
@@ -140,11 +140,11 @@
 							<input type="text" name="email" id="email" />
 						</div>
 						<div class="field">
-							<label for="message">Message</label>
+							<label for="message">Lời nhắn</label>
 							<textarea name="message" id="message" rows="6"></textarea>
 						</div>
 						<ul class="actions">
-							<li><input type="submit" value="Send Message" class="alt" /></li>
+							<li><input type="submit" value="Gửi lời nhắn" class="alt" /></li>
 						</ul>
 					</form>
 					<div class="copyright">
