--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 					</a>
 					<nav id="nav">
 						<a href="index.html">Giới thiệu</a>
-						<a href="generic.html">Thành viên</a>
-						<a href="Hoạt động.html">Hoạt động</a>
+						<a href="https://dangkhanh911.github.io/nhom2/">Thành viên</a>
+						<a href="https://dangkhanh911.github.io/webgroup3/">Hoạt động</a>
 					</nav>
 				</div>
 			</header>
@@ -32,47 +32,41 @@
 
 					<!-- Text -->
 						<section>
-							<h3>Năm 2018</h3>
+							<h3>Năm 2021</h3>
 							<ul>
-								<li>Ngày 14/9/2018: Bài viết đầu tiên giới thiệu CLB được đăng tải</li>
-								<li>Ngày 16/9/2018: Giới thiệu những hình ảnh cùng những thông tin về Arduino</li>
-								<div></div>
-								<img src="https://scontent.fsgn5-5.fna.fbcdn.net/v/t1.0-9/57620732_387845575166417_8645893373007233024_o.jpg?_nc_cat=100&ccb=1-3&_nc_sid=730e14&_nc_ohc=5TXAX7lpR
-								okAX8K86ag&_nc_ht=scontent.fsgn5-5.fna&oh=257708421f2c725d29a9d78e101e497f&oe=607A7D5C" height=400 width=600 style="margin-left:25%;">
-								<img src="../webgroup3/images/Arduino1.jpg" height=400 width=600 style="margin-left:25%;">
-								<img src="../webgroup3/images/Arduino2.jpg" height=400 width=600 style="margin-left:25%;">
-								<h6 style="text-align: center; color: black;">Các thành viên nghiên cứu về Arduino</h6>							
-								<li>Ngày 21/9/2018: Video đầu tiên về Robot giao phát bài tập được đăng tải</li>
-								<li>Ngày 1/10/2018: Thông tin về đợt tuyển thành viên đầu tiên đươc đăng</li>
-								<li>Ngày 18,20/10/2018: Phỏng vấn tuyển thành viên</li>
-								<li>Ngày 24/10/2018: Kết quá phỏng vấn</li>
-								<li>Ngày 18/11/2018: Offline giao lưu công</li>
+							<li>Tổ chức sự kiện Techmeet</li>
+								<img src="../webgroup3/images/TECHMEET1.jpg" height=70% width=70% style="margin-left: 15%;">
+								<img src="../webgroup3/images/TECHMEET2.jpg" height=70% width=70% style="margin-left: 15%;">
+								<h6 style="text-align: center; color: black;">Sự kiện Techmeet được tổ chức thành công tốt đẹp</h6>	
+							</ul>
+							<h3>Năm 2020</h3>
+							<ul>
+							<li>Tuyển chọn thành viên K26</li>
+							<li>Hoàn thành máy rửa tay cho nhà trường</li>
+							<li>Techledge các thế hệ máy tính</li>
 							</ul>
 							<h3>Năm 2019</h3>
 							<ul>
-							<li>Ngày 15/1/2019: Các thành viên CLB tham gia cuộc thi đua thuyền Arduino và giành giải khuyến khích</li>
-								<img src="../webgroup3/images/duathuyen1.jpg" height="400px" width="600px" style="margin-left: 25%;">
-								<img src="../webgroup3/images/duathuyen6.jpg" height="400px" width="600px" style="margin-left: 25%;">
-								<img src="../webgroup3/images/duathuyen7.jpg" height="400px" width="600px" style="margin-left: 25%;">
+							<li>Các thành viên CLB tham gia cuộc thi đua thuyền Arduino và giành giải khuyến khích</li>
+								<img src="../webgroup3/images/duathuyen1.jpg" height=70% width=70% style="margin-left: 15%;">
+								<img src="../webgroup3/images/duathuyen6.jpg" height=70% width=70% style="margin-left: 15%;">
+								<img src="../webgroup3/images/duathuyen7.jpg" height=70% width=70% style="margin-left: 15%;">
 								<h6 style="text-align: center; color: black;">Các thành viên tham dự cuộc thi đua thuyền Arduino</h6>	
-							<li>Ngày 5/5/2019: Ứng dụng Arduino được hoàn thành và trưng bày</li>
-							<li>Ngày 28/8/2019: Chào mừng K26</li>
+							<li>Ứng dụng Arduino được hoàn thành và trưng bày</li>
 							</ul>
-							<h4>Năm 2020</h4>
+							<h3>Năm 2018</h3>
 							<ul>
-							<li>Ngày 7-11/2/2020: Tuyển chọn thành viên K26</li>
-							<li>Ngày 5-6/2020: Hoàn thành máy rửa tay cho nhà trường</li>
-							<li>Ngày 26/8/2020-23/9/2020: Techledge các thế hệ máy tính</li>
-							<li>Ngày 24/11/2020: Giới thiệu mở đơn đăng kí sự kiện</li>
-							</ul>
-							<h4>Năm 2021</h4>
-							<ul>
-							<li>Ngày 5/1/2021: Tổ chức sự kiện Techmeet</li>
-								<img src="../webgroup3/images/TECHMEET1.jpg" height="400px" width="600px" style="margin-left: 25%;">
-								<img src="../webgroup3/images/TECHMEET2.jpg" height="400px" width="600px" style="margin-left: 25%;">
-								<h6 style="text-align: center; color: black;">Sự kiện Techmeet được tổ chức thành công tốt đẹp</h6>	
-							<li>Ngày 6/1-15/1/2021: Tuyển thành viên</li>
-							<p>...Đang cập nhật...</p>
+								<li>Bài viết đầu tiên giới thiệu CLB được đăng tải</li>
+								<li>Ngày 16/9/2018: Giới thiệu những hình ảnh cùng những thông tin về Arduino</li>
+								<div></div>
+								<img src="https://scontent.fsgn5-5.fna.fbcdn.net/v/t1.0-9/57620732_387845575166417_8645893373007233024_o.jpg?_nc_cat=100&ccb=1-3&_nc_sid=730e14&_nc_ohc=5TXAX7lpR
+								okAX8K86ag&_nc_ht=scontent.fsgn5-5.fna&oh=257708421f2c725d29a9d78e101e497f&oe=607A7D5C" height=70% width=70% style="margin-left:15%;">
+								<img src="../webgroup3/images/Arduino1.jpg" height=70% width=70% style="margin-left:15%;">
+								<img src="../webgroup3/images/Arduino2.jpg" height=70% width=70% style="margin-left:15%;">
+								<h6 style="text-align: center; color: black;">Các thành viên nghiên cứu về Arduino</h6>							
+								<li>Video đầu tiên về Robot giao phát bài tập được đăng tải</li>
+								<li>Thông tin về đợt tuyển thành viên đầu tiên đươc đăng</li>
+								<li>Offline giao lưu công</li>
 							</ul>
 						<hr>
 
