--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a class="logo" href="index.html"> 
+					<a class="logo" href="https://rookie001mc.github.io/Homepage-Project-1/"> 
 						<img class="img_icon" src="../webgroup3/images/TECH.jpg">
 					</a>
 					<nav id="nav">
-						<a href="index.html">Giới thiệu</a>
+						<a href="https://rookie001mc.github.io/Homepage-Project-1/">Giới thiệu</a>
 						<a href="https://dangkhanh911.github.io/nhom2/">Thành viên</a>
 						<a href="https://dangkhanh911.github.io/webgroup3/">Hoạt động</a>
 					</nav>
